tests/sema/fail/fallible_cast_coalesce_to_non_nullable.kl
// RUN: check
// COMPILE-FAIL
// EXPECT-EXIT: 65

int main() {
  int n = int("xyz") ?: -1;
  return n;
}
